syntax = "proto3";

package proto;

option go_package = "rusve/proto";

enum UserRole {
    UNSET = 0;
    ROLE_USER = 1;
    ROLE_ADMIN = 2;
}

message AuthRequest {
    string sub = 1;
    string email = 2;
}

message User {
    string id = 1;
    string created = 2;
    string updated = 3;
    optional string deleted = 4;

    string email = 5;
    UserRole role = 6;
    string sub = 7;

    string name = 8;
    optional string avatar_id = 9;
    optional string payment_id = 10;
}

